# KitsuneEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  vc140.idb
.github/workflows/: cmake-multi-platform.yml  qodana_code_quality.yml
src/: CMakeLists.txt  hello_triangle.cpp  kitsune_engine.cpp  kitsune_engine.hpp  kitsune_types.h  kitsune_windowing.cpp  kitsune_windowing.hpp  main.cpp
